--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ span {
     font-weight: 300;
 }
 
-.footer {
+footer {
     text-align: center;
     background-color: black;
     color: wheat;
